# graphql_server_sample

./: .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: database.py  main.py
app/cruds/: seeds.py  todos.py  users.py
app/models/: todos.py  users.py
app/schema/: schema.py  todos.py  users.py
